# cordbeat

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.adapter  LICENSE  README.md  SECURITY.md  config.example.yaml  docker-compose.yml  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: README.md  ai-backends.md  architecture.md  config-reference.md  deployment.md  engine.md  gateway.md  heartbeat.md  memory.md  philosophy.md  react-design.md  skills.md  soul.md  validation.md
site/: CNAME  index.html
skills/api_call/: main.py  pyproject.toml  skill.yaml
skills/draw/: main.py  pyproject.toml  skill.yaml
skills/fetch_url/: main.py  pyproject.toml  skill.yaml
skills/file_read/: main.py  pyproject.toml  skill.yaml
skills/file_write/: main.py  pyproject.toml  skill.yaml
skills/read_diary/: main.py  pyproject.toml  skill.yaml
skills/shell_exec/: main.py  pyproject.toml  skill.yaml
skills/timer/: main.py  pyproject.toml  skill.yaml
skills/weather/: main.py  pyproject.toml  skill.yaml
skills/web_search/: main.py  pyproject.toml  skill.yaml
src/cordbeat/: __init__.py  _memory_common.py  _memory_conversation.py  _memory_migrations.py  _memory_records.py  _memory_users.py  _memory_vector.py  adapter_runner.py  ai_backend.py  backup_cli.py  cli_adapter.py  config.py  discord_adapter.py  doctor.py  engine.py  exceptions.py  export_cli.py  extraction.py  gateway.py  heartbeat.py  heartbeat_proposals.py  heartbeat_sleep.py  line_adapter.py  llm_cache.py  main.py  memory.py  metrics_server.py  models.py  prompt.py  rvc_backend.py  setup_wizard.py  signal_adapter.py  skill_env.py  skill_runner.py  skill_sandbox.py  skill_validator.py  skills.py  slack_adapter.py  soul.py  telegram_adapter.py  (+3 more)
src/cordbeat/adapters/: __init__.py  _utils.py  cli.py  discord.py  line.py  runner.py  signal.py  signing.py  slack.py  telegram.py  whatsapp.py
src/cordbeat/agent/: __init__.py  heartbeat.py  proposals.py  react_types.py  sleep.py  soul.py
src/cordbeat/ai/: __init__.py  backend.py  cache.py  compression.py  extraction.py  prompt.py  stt.py  tts.py  validation.py
src/cordbeat/core/: __init__.py  engine.py  gateway.py
src/cordbeat/memory/: __init__.py  common.py  conversation.py  core.py  migrations.py  records.py  users.py  vector.py
src/cordbeat/skills/: __init__.py  env.py  rate_limit.py  registry.py  sandbox.py  validator.py
src/cordbeat/tools/: __init__.py  add_cmd.py  config_template.yaml  doctor.py  metrics.py  metrics_server.py  service.py  wizard.py
tests/: conftest.py  test_adapter_filter.py  test_adapter_runner.py  test_adapter_signatures.py  test_adapters.py  test_add_cmd.py  test_ai_backend.py  test_ai_decision_llm.py  test_api_call_skill.py  test_backup_cli.py  test_cli_adapter.py  test_cli_entrypoints.py  test_compression.py  test_config.py  test_discord_vc.py  test_doctor.py  test_draw_skill.py  test_engine.py  test_exceptions.py  test_export_cli.py  test_extraction.py  test_fetch_url_skill.py  test_gateway.py  test_heartbeat.py  test_lazy_imports.py  test_llm_cache.py  test_memory.py  test_memory_migrations.py  test_metrics.py  test_metrics_server.py  test_models.py  test_prompt.py  test_service.py  test_setup_wizard.py  test_skill_env.py  test_skill_rate_limit.py  test_skill_validator.py  test_skills.py  test_soul.py  test_validation.py  (+2 more)
tests/integration/: test_gateway_engine_e2e.py  test_memory_d3.py  test_memory_vector.py
tests/skills/api_call/: main.py  pyproject.toml  skill.yaml
tests/skills/draw/: main.py  pyproject.toml  skill.yaml
tests/skills/file_read/: main.py  pyproject.toml  skill.yaml
tests/skills/file_write/: main.py  pyproject.toml  skill.yaml
tests/skills/read_diary/: main.py  pyproject.toml  skill.yaml
tests/skills/shell_exec/: main.py  pyproject.toml  skill.yaml
tests/skills/timer/: main.py  pyproject.toml  skill.yaml
tests/skills/weather/: main.py  pyproject.toml  skill.yaml
tests/skills/web_search/: main.py  pyproject.toml  skill.yaml
設計書/: batch-c-questionnaire.md  gap-analysis-2026-04-20.md
