[project]
name = "cordbeat"
version = "0.1.0"
description = "A local-first autonomous AI agent that thinks, acts, and stays by your side"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "chromadb>=1.0",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "psutil>=5.9",
    "tzdata>=2024.1; sys_platform == 'win32'",
]

[project.scripts]
cordbeat = "cordbeat.main:cli"
cordbeat-init = "cordbeat.setup_wizard:cordbeat_init_cli"
cordbeat-discord = "cordbeat.adapter_runner:discord_cli"
cordbeat-telegram = "cordbeat.adapter_runner:telegram_cli"
cordbeat-slack = "cordbeat.adapter_runner:slack_cli"
cordbeat-line = "cordbeat.adapter_runner:line_cli"
cordbeat-whatsapp = "cordbeat.adapter_runner:whatsapp_cli"
cordbeat-signal = "cordbeat.adapter_runner:signal_cli"

[project.optional-dependencies]
discord = ["discord.py>=2.0"]
telegram = ["python-telegram-bot>=21.0"]
slack = ["slack-sdk>=3.27", "aiohttp>=3.9"]
line = ["line-bot-sdk>=3.11", "aiohttp>=3.9"]
whatsapp = ["aiohttp>=3.9"]
signal = []
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cordbeat"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# ast.NodeVisitor requires specific method names (visit_Name, visit_Call, ...)
"src/cordbeat/skill_validator.py" = ["N802"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = [
    "cordbeat.discord_adapter",
    "cordbeat.telegram_adapter",
    "cordbeat.slack_adapter",
    "cordbeat.line_adapter",
    "cordbeat.whatsapp_adapter",
    "cordbeat.signal_adapter",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["cordbeat"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 78
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "if TYPE_CHECKING",
]
