[project]
name = "cordbeat"
version = "0.5.0"
description = "A local-first autonomous AI agent that thinks, acts, and stays by your side"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "sqlite-vec>=0.1.9",
    "sentence-transformers>=3.0",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "psutil>=5.9",
    "tzdata>=2024.1; sys_platform == 'win32'",
]

[project.scripts]
cordbeat = "cordbeat.main:cli"
cordbeat-chat = "cordbeat.main:cli_chat"
cordbeat-init = "cordbeat.tools.wizard:cordbeat_init_cli"
cordbeat-discord = "cordbeat.adapters.runner:discord_cli"
cordbeat-telegram = "cordbeat.adapters.runner:telegram_cli"
cordbeat-slack = "cordbeat.adapters.runner:slack_cli"
cordbeat-line = "cordbeat.adapters.runner:line_cli"
cordbeat-whatsapp = "cordbeat.adapters.runner:whatsapp_cli"
cordbeat-signal = "cordbeat.adapters.runner:signal_cli"
cordbeat-backup = "cordbeat.tools.backup:backup_main"
cordbeat-restore = "cordbeat.tools.backup:restore_main"
cordbeat-export = "cordbeat.tools.export:export_main"
cordbeat-doctor = "cordbeat.tools.doctor:main"
cordbeat-add = "cordbeat.tools.add_cmd:cordbeat_add_cli"

[project.optional-dependencies]
discord = ["discord.py>=2.0"]
telegram = ["python-telegram-bot>=21.0"]
slack = ["slack-sdk>=3.27", "aiohttp>=3.9"]
line = ["line-bot-sdk>=3.11", "aiohttp>=3.9"]
whatsapp = ["aiohttp>=3.9"]
signal = []
discord-vc = ["discord.py[voice]>=2.0", "discord-ext-voice-recv>=0.3", "numpy>=1.24", "scipy>=1.11"]
rvc = ["torch>=2.1", "transformers>=4.40", "torchaudio>=2.1", "numpy>=1.24", "scipy>=1.11"]
stt-local = ["faster-whisper>=1.0"]
tts-edge = ["edge-tts>=6.1"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "pip-audit>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cordbeat"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# ast.NodeVisitor requires specific method names (visit_Name, visit_Call, ...)
"src/cordbeat/skills/validator.py" = ["N802"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["sqlite_vec"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "cordbeat.voice_recv",
    "cordbeat.rvc_backend",
    "cordbeat.adapters.discord",
    "cordbeat.adapters.telegram",
    "cordbeat.adapters.slack",
    "cordbeat.adapters.line",
    "cordbeat.adapters.whatsapp",
    "cordbeat.adapters.signal",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["faster_whisper", "edge_tts"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "torch",
    "torch.*",
    "torchaudio",
    "torchaudio.*",
    "transformers",
    "discord.ext.voice_recv",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: end-to-end tests against real backends (sqlite-vec, etc.)",
]

[tool.coverage.run]
source = ["cordbeat"]
omit = [
    # skill_runner runs only inside skill subprocesses; pytest's coverage
    # collector cannot trace it through the sandboxed -I invocation.
    # End-to-end exercise happens via test_skills_subprocess.py.
    "*/cordbeat/skills/runner.py",
    # Optional platform adapter skeletons. The respective SDKs
    # (line-bot-sdk, slack-sdk, etc.) are extras-only deps and not
    # installed in the default CI environment, so the SDK-installed
    # branches cannot be exercised here. Discord/Telegram remain
    # measured because their SDKs are part of the default test deps.
    "*/cordbeat/adapters/line.py",
    "*/cordbeat/adapters/slack.py",
    "*/cordbeat/adapters/whatsapp.py",
    "*/cordbeat/adapters/signal.py",
    # Voice receive and RVC backend require optional extras (discord-vc, rvc)
    # that are not installed in the default test environment.
    "*/cordbeat/voice_recv.py",
    "*/cordbeat/rvc_backend.py",
    # Entry point: starts the event loop; tested via integration tests.
    "*/cordbeat/main.py",
    # Interactive setup wizard: requires live user input; cannot be driven
    # by a unit-test runner.
    "*/cordbeat/tools/wizard.py",
    # Metrics HTTP server: a long-lived daemon thread; requires a running
    # TCP listener which is impractical to drive in pytest.
    "*/cordbeat/tools/metrics_server.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "if TYPE_CHECKING",
]

[dependency-groups]
dev = [
    "pillow>=12.2.0",
]
